crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__schema2__sibling_dependencies-graph.snap
---
source: engine/crates/engine/query-solver/src/tests/schema2.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"id\" ]\n    2 [ label = \"username\" ]\n    3 [ label = \"price\" ]\n    4 [ label = \"id\" ]\n    5 [ label = \"username\" ]\n    6 [ label = \"author\" ]\n    7 [ label = \"body\" ]\n    8 [ label = \"reviews\" ]\n    9 [ label = \"products\" ]\n    10 [ label = \"cart\" ]\n    11 [ label = \"me\" ]\n    12 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue ]\n    13 [ label = \"me#accounts\", shape=box, color=dodgerblue ]\n    14 [ label = \"cart#accounts\", shape=box, color=dodgerblue ]\n    15 [ label = \"products#accounts\", shape=box, color=dodgerblue ]\n    16 [ label = \"FedEntity#reviews\", shape=parallelogram, color=dodgerblue ]\n    17 [ label = \"reviews#reviews\", shape=box, color=dodgerblue ]\n    18 [ label = \"body#reviews\", shape=box, color=dodgerblue ]\n    19 [ label = \"author#reviews\", shape=box, color=dodgerblue ]\n    20 [ label = \"FedEntity#accounts\", shape=parallelogram, color=dodgerblue ]\n    21 [ label = \"username#accounts\", shape=box, color=dodgerblue ]\n    22 [ label = \"id#reviews\", shape=box, color=dodgerblue ]\n    23 [ label = \"FedEntity#products\", shape=parallelogram, color=dodgerblue ]\n    24 [ label = \"price#products\", shape=box, color=dodgerblue ]\n    25 [ label = \"FedEntity#products\", shape=parallelogram, color=dodgerblue ]\n    26 [ label = \"price#products\", shape=box, color=dodgerblue ]\n    27 [ label = \"username#accounts\", shape=box, color=dodgerblue ]\n    28 [ label = \"id#accounts\", shape=box, color=dodgerblue ]\n    29 [ label = \"*name\" ]\n    30 [ label = \"name#accounts\", shape=box, color=dodgerblue ]\n    31 [ label = \"name#products\", shape=box, color=dodgerblue ]\n    32 [ label = \"*upc\" ]\n    33 [ label = \"upc#products\", shape=box, color=dodgerblue ]\n    0 -> 11 [ label = \"\" ]\n    0 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 12 [ label = \"\", style=dashed,arrowhead=none ]\n    12 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    13 -> 11 [ label = \"\", color=violet,arrowhead=none ]\n    11 -> 10 [ label = \"\" ]\n    13 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    14 -> 10 [ label = \"\", color=violet,arrowhead=none ]\n    10 -> 9 [ label = \"\" ]\n    14 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    15 -> 9 [ label = \"\", color=violet,arrowhead=none ]\n    9 -> 8 [ label = \"\" ]\n    15 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 16 [ label = \"\", style=dashed,arrowhead=none ]\n    16 -> 17 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    17 -> 8 [ label = \"\", color=violet,arrowhead=none ]\n    8 -> 7 [ label = \"\" ]\n    17 -> 18 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    18 -> 7 [ label = \"\", color=violet,arrowhead=none ]\n    8 -> 6 [ label = \"\" ]\n    17 -> 19 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    19 -> 6 [ label = \"\", color=violet,arrowhead=none ]\n    6 -> 5 [ label = \"\" ]\n    19 -> 20 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    6 -> 20 [ label = \"\", style=dashed,arrowhead=none ]\n    20 -> 21 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    21 -> 5 [ label = \"\", color=violet,arrowhead=none ]\n    6 -> 4 [ label = \"\" ]\n    19 -> 22 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    22 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n    9 -> 3 [ label = \"\" ]\n    15 -> 23 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 23 [ label = \"\", style=dashed,arrowhead=none ]\n    23 -> 24 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    24 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    15 -> 25 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 25 [ label = \"\", style=dashed,arrowhead=none ]\n    25 -> 26 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    26 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    11 -> 2 [ label = \"\" ]\n    13 -> 27 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    27 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    11 -> 1 [ label = \"\" ]\n    13 -> 28 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    28 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    25 -> 29 [ label = \"\", color=orangered,arrowhead=inv ]\n    9 -> 29 [ label = \"\" ]\n    15 -> 30 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    30 -> 29 [ label = \"\", color=violet,arrowhead=none ]\n    23 -> 31 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    31 -> 29 [ label = \"\", color=violet,arrowhead=none ]\n    23 -> 32 [ label = \"\", color=orangered,arrowhead=inv ]\n    9 -> 32 [ label = \"\" ]\n    25 -> 33 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    33 -> 32 [ label = \"\", color=violet,arrowhead=none ]\n    20 -> 4 [ label = \"\", color=orangered,arrowhead=inv ]\n    16 -> 32 [ label = \"\", color=orangered,arrowhead=inv ]\n}\n"
---
digraph {
    0 [ root]
    1 [ id]
    2 [ username]
    3 [ price]
    4 [ id]
    5 [ username]
    6 [ author]
    7 [ body]
    8 [ reviews]
    9 [ products]
    10 [ cart]
    11 [ me]
    12 [ Root#accounts]
    13 [ me#accounts]
    14 [ cart#accounts]
    15 [ products#accounts]
    16 [ FedEntity#reviews]
    17 [ reviews#reviews]
    18 [ body#reviews]
    19 [ author#reviews]
    20 [ FedEntity#accounts]
    21 [ username#accounts]
    22 [ id#reviews]
    23 [ FedEntity#products]
    24 [ price#products]
    25 [ FedEntity#products]
    26 [ price#products]
    27 [ username#accounts]
    28 [ id#accounts]
    29 [ *name]
    30 [ name#accounts]
    31 [ name#products]
    32 [ *upc]
    33 [ upc#products]
    0 -> 11 [ label = "Field" ]
    0 -> 12 [ label = "CreateChildResolver" ]
    0 -> 12 [ label = "HasChildResolver" ]
    12 -> 13 [ label = "CanProvide" ]
    13 -> 11 [ label = "Provides" ]
    11 -> 10 [ label = "Field" ]
    13 -> 14 [ label = "CanProvide" ]
    14 -> 10 [ label = "Provides" ]
    10 -> 9 [ label = "Field" ]
    14 -> 15 [ label = "CanProvide" ]
    15 -> 9 [ label = "Provides" ]
    9 -> 8 [ label = "Field" ]
    15 -> 16 [ label = "CreateChildResolver" ]
    9 -> 16 [ label = "HasChildResolver" ]
    16 -> 17 [ label = "CanProvide" ]
    17 -> 8 [ label = "Provides" ]
    8 -> 7 [ label = "Field" ]
    17 -> 18 [ label = "CanProvide" ]
    18 -> 7 [ label = "Provides" ]
    8 -> 6 [ label = "Field" ]
    17 -> 19 [ label = "CanProvide" ]
    19 -> 6 [ label = "Provides" ]
    6 -> 5 [ label = "Field" ]
    19 -> 20 [ label = "CreateChildResolver" ]
    6 -> 20 [ label = "HasChildResolver" ]
    20 -> 21 [ label = "CanProvide" ]
    21 -> 5 [ label = "Provides" ]
    6 -> 4 [ label = "Field" ]
    19 -> 22 [ label = "CanProvide" ]
    22 -> 4 [ label = "Provides" ]
    9 -> 3 [ label = "Field" ]
    15 -> 23 [ label = "CreateChildResolver" ]
    9 -> 23 [ label = "HasChildResolver" ]
    23 -> 24 [ label = "CanProvide" ]
    24 -> 3 [ label = "Provides" ]
    15 -> 25 [ label = "CreateChildResolver" ]
    9 -> 25 [ label = "HasChildResolver" ]
    25 -> 26 [ label = "CanProvide" ]
    26 -> 3 [ label = "Provides" ]
    11 -> 2 [ label = "Field" ]
    13 -> 27 [ label = "CanProvide" ]
    27 -> 2 [ label = "Provides" ]
    11 -> 1 [ label = "Field" ]
    13 -> 28 [ label = "CanProvide" ]
    28 -> 1 [ label = "Provides" ]
    25 -> 29 [ label = "Requires" ]
    9 -> 29 [ label = "Field" ]
    15 -> 30 [ label = "CanProvide" ]
    30 -> 29 [ label = "Provides" ]
    23 -> 31 [ label = "CanProvide" ]
    31 -> 29 [ label = "Provides" ]
    23 -> 32 [ label = "Requires" ]
    9 -> 32 [ label = "Field" ]
    25 -> 33 [ label = "CanProvide" ]
    33 -> 32 [ label = "Provides" ]
    20 -> 4 [ label = "Requires" ]
    16 -> 32 [ label = "Requires" ]
}
